# omanta_3rd

./: .env.example  .gitattributes  .gitignore  APPLY_OPTIMIZATION_RESULTS.md  ARCHITECTURE.md  BACKTEST_PERFORMANCE_VERIFICATION.md  CALCULATION_DETAILED_REPORT.md  CALCULATION_FINAL_REPORT.md  CALCULATION_FORMULA_VERIFICATION.md  CALCULATION_LOGIC2.md  CALCULATION_LOGIC3.md  CALCULATION_LOGIC4.md  CALCULATION_LOGIC5.md  CALCULATION_LOGIC6.md  CALCULATION_LOGIC7.md  CALCULATION_LOGIC_FINAL.md  CALCULATION_LOGIC_SPEC.md  CALCULATION_LOGIC_STANDARD.md  CALCULATION_LOGIC_VERIFICATION_REPORT.md  CALCULATION_REPORT.md  CALCULATION_REPORT.txt  CALCULATION_REPORT_FOR_CHATGPT.md  CALCULATION_VERIFICATION_SUMMARY.md  CHATGPT_ADVICE_IMPLEMENTATION.md  CHATGPT_EVALUATION_SUMMARY.md  CHATGPT_FORMULA_VERIFICATION_PROMPT.md  CHATGPT_HOLDOUT_PROMPT.md  CHATGPT_PROMPT_LONGTERM_OPTIMIZATION.md  CHATGPT_PRO_ANALYSIS_PROMPT.md  CHATGPT_PRO_PROMPT.md  CHATGPT_PRO_VERIFICATION_PROMPT.md  CHATGPT_VERIFICATION_LONGTERM_OPTIMIZATION.md  CHATGPT_VERIFICATION_RESULT_SUMMARY.md  CLAUDE.md  CONVERGENCE_IMPROVEMENT_PROPOSAL.md  COST_SENSITIVITY_IMPROVEMENTS_SUMMARY.md  COST_SENSITIVITY_RESULT_SUMMARY.md  CURSOR_PROMPT_TIMESERIES_NEXT.md  DB_MIGRATION_INSTRUCTIONS.md  DESIGN_IMPROVEMENTS_LONGTERM.md  (+326 more)
chat/: 20251215cursor_investment_algorithm_folder_stru.md  No1_cursor_investment_algorithm_folder_stru.md  No2_cursor_investment_algorithm_folder_stru.md
data/: schema.sql
docs/: 24m_algorithm_performance_analysis.md  5DAY_PRODUCTION_OPTIMIZATION_PLAN.md  ALGORITHM_LEARNING_STEP_BY_STEP.md  (+63 more)
(+240 files in other folders)
